# keahi_ambient_agent_service

./: .cursorignore  .gitignore  README.md  app-config.toml
docs/: design.md  firestore_integration_tests.md  index.md  signal_manager_service_protocol.md
signal_manager_service/: .dockerignore  Cargo.toml  Dockerfile  README.md  app-config.toml  build.sh  config-custom.toml  config.toml  test_webrtc.rs
signal_manager_service/scripts/: run_firestore_tests.sh
signal_manager_service/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  message.rs  server.rs  session.rs
signal_manager_service/src/cloudflare/: client.rs  mod.rs  models.rs  session.rs
signal_manager_service/src/database/: client_in_room_repository.rs  client_in_terminated_room_repository.rs  client_repository.rs  error.rs  firestore.rs  firestore_webrtc_client_repository.rs  firestore_webrtc_room_repository.rs  mod.rs  models.rs  repository.rs  repository_factory.rs  room_created_repository.rs  terminated_room_repository.rs  webrtc_client_repository.rs  webrtc_room_repository.rs
signal_manager_service/src/events/: README.md  events_client_gcp.rs  example.rs  interface.rs  mod.rs  test_example.rs
signal_manager_service/src/frame_handlers/: mod.rs  ping.rs  type2_json.rs
signal_manager_service/src/type_two_handlers/: mod.rs  register.rs  unregister.rs
signal_manager_service/src/webrtc_handlers/: mod.rs  room_create.rs  room_join.rs  room_leave.rs
signal_manager_service/tests/: cloudflare_client_unit.rs  cloudflare_integration_test.rs  cloudflare_session_unit.rs  firestore_integration_tests.rs  integration_tests.rs
signal_manager_service/tests/auth/: mod.rs
signal_manager_service/tests/config/: mod.rs
signal_manager_service/tests/database/: firestore.rs  integration.rs  mod.rs  models.rs  repository.rs  simple.rs
signal_manager_service/tests/message/: mod.rs
signal_manager_service/tests/protocol/: mod.rs
signal_manager_service/tests/server/: mod.rs
signal_manager_service_test_client/: Cargo.toml  README.md
signal_manager_service_test_client/src/: main.rs
user_agent/: README.md  SIGNAL_MANAGER_CLIENT.md  app-config.toml  build.sh  components.json  index.html  package-lock.json  package.json  start-test.sh  tailwind.config.js  test-connection.html  test-reset.html  (+2 more)
(+55 files in other folders)
