[package]
name = "signal-manager-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.23.0", features = ["native-tls"] }
futures-util = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
config = { version = "0.14", features = ["toml"] }
clap = { version = "4.0", features = ["derive"] }
base64 = "0.21"
native-tls = "0.2"
tokio-native-tls = "0.3"
async-trait = "0.1"
google-cloud-pubsub = "0.20"
google-cloud-default = "0.1"
chrono = { version = "0.4", features = ["serde"] }
