[package]
name = "signal-manager-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = { version = "0.13", features = ["toml"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
native-tls = "0.2"
tokio-native-tls = "0.3"
base64 = "0.21"
firestore = "0.46"
firestore-serde = "0.1"
gcloud-sdk = "0.27"
google-cloud-default = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
mockall = "0.12"
